# tuff

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: lib.rs  profile.rs
src/arch/: aarch64.rs  detect.rs  mod.rs
src/metrics/: counter.rs  cpu.rs  freq.rs  mod.rs  os.rs  time.rs
src/os/: apple.rs  mod.rs
src/profile/: mod.rs  profiler.rs  report.rs
src/report/: fmt.rs  rep.rs
tests/: test_simple.rs
tuff/: Cargo.toml
tuff-core/: Cargo.toml
tuff-core/src/: lib.rs
tuff-core/src/arch/: aarch64.rs  mod.rs  test.rs
tuff-core/src/metrics/: freq.rs  time.rs
tuff-core/src/os/: apple.rs  test.rs
tuff-core/src/profile/: mod.rs  profiler.rs
tuff-core/src/report/: fmt.rs  mod.rs  rep.rs
tuff-macro/: Cargo.toml
tuff-macro/src/: lib.rs
tuff/examples/: main.rs
tuff/src/: lib.rs
