[package]
name = "tuff"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
name = "tuff"
path = "src/lib.rs"

[[bin]]
name = "tuff"
path = "src/bin/main.rs"


[dependencies]
libc = "0.2.171"
mach2 = "0.4.2"
paste = "1.0.15"
raw-cpuid = "11.5.0"
tabwriter = { version = "1.4.1", features = ["ansi_formatting"] }
colored = "3.0.0"

[dev-dependencies]
